--- a/mobile/index.html
+++ b/mobile/index.html
@@ -64,19 +64,19 @@
 
 
         <a href="./used.html">
-            <img class="info_img" src="./image/wipro.jpg"/>
+            <img class="info_img" src="./image/1.jpg"/>
         </a>
         <a href="./airobot.html">
-            <img class="info_img" src="./image/airobot.png"/>
+            <img class="info_img" src="./image/2.jpg"/>
         </a>
         <a href="./zhuanjia.html">
-            <img class="info_img" src="./image/wi-Matt.png"/>
+            <img class="info_img" src="./image/3.jpg"/>
         </a>
         <a href="./ourteam.html">
-            <img class="info_img" src="./image/learnmore.jpg"/>
+            <img class="info_img" src="./image/4.jpg"/>
         </a>
         <a href="./welcome.html ">
-            <img class="info_img" src="./image/joinus.jpg"/>
+            <img class="info_img" src="./image/5.jpg"/>
         </a>
 
 
