--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -162,7 +162,7 @@
                     <img src="image/tanmingxuan.png"/>
                     <div class="expert_info">
                         <div class="name">谭茗轩</div>
-                        <div>美国雪城大学攻读社会心理学博士</div>
+                        <div>雪城大学攻读社会心理学博士生</div>
                         <div class="position_img">美国 纽约州</div>
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
@@ -186,7 +186,7 @@
                     <img src="image/huyifan-head.png"/>
                     <div class="expert_info">
                         <div>胡一凡</div>
-                        <div>美国伊利诺伊大学厄巴纳-香槟分校认知神经学博士生</div>
+                        <div>伊利诺伊大学厄巴纳-香槟分校认知神经学博士生</div>
                         <div class="position_img">美国 伊利诺伊州</div>
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
@@ -198,7 +198,7 @@
                     <img src="image/wangzao-head.png"/>
                     <div class="expert_info">
                         <div>王枣</div>
-                        <div>美国耶鲁大学社会人格心理学博士</div>
+                        <div>耶鲁大学社会人格心理学博士生</div>
                         <div class="position_img">美国 康涅狄格州</div>
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
@@ -210,7 +210,7 @@
                     <img src="image/xuyishan-head.png"/>
                     <div class="expert_info">
                         <div>徐艺珊</div>
-                        <div>弗吉尼亚大学临心床理学博士</div>
+                        <div>弗吉尼亚大学临心床理学博士生</div>
                         <div class="position_img">美国 弗吉尼亚州</div>
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
@@ -307,7 +307,7 @@
                     <img src="image/cheshihan-head.png"/>
                     <div class="expert_info">
                         <div>陈诗涵</div>
-                        <div>美国宾夕法尼亚大学谘询与心理卫生硕士</div>
+                        <div>宾夕法尼亚大学谘询与心理卫生硕士</div>
                         <div class="position_img">美国 费城</div>
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
