--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -341,6 +341,30 @@
                 </div>
                 <div class="head_info">冯骏豪 Jacky，幸福创客。北京大学哲学博士生，清华大学哲学硕士。专攻中国哲学研究，相信中国传统智慧能够为建立幸福生活带来贡献。除了埋首书籍和写作，更喜欢走进社会，观察不同人的生活模式，认识不同地域的文化，寻找快乐的生活方式和学习欣赏生活细节中的美感。现在穿梭北京和香港生活，感受着古都和大都会独特的人文脉动。</div>
             </li>
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/zhanglimin-head.png"/>
+                    <div class="expert_info">
+                        <div>张立民</div>
+                        <div>明尼苏达大学人力资源管理硕士</div>
+                        <div class="position_img">美国 明尼苏达州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">张立民，幸福创客。美国明尼苏达大学人力资源管理硕士。幸福是企业带给员工最大的福利，提高员工的幸福感，不仅可以激发员工潜能，增强归属感，提高管理效率，更是促进企业创新能力的一个重要因素。幸福应当根植于企业文化，伴随着员工的发展生根发芽，用幸福来铸基业长青。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/shilingxiao-head.png"/>
+                    <div class="expert_info">
+                        <div>石凌霄</div>
+                        <div>明尼苏达大学人力资源管理硕士</div>
+                        <div class="position_img">美国 明尼苏达州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">石凌霄，幸福创客。美国明尼苏达大学人力资源管理硕士。爱生活也爱学习，助人以为乐，宽人而律己。研究兴趣于组织行为与雇员管理，深信人乃组织之本，员工幸福为组织效率之源泉。愿贡献一己之力，创造员工幸福与组织效率双赢，更愿每个人都被这世界温柔相待。</div>
+            </li>
 
 
         <ul>
