--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -98,42 +98,48 @@
         </ul>
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“Wi-Matt”（创客汇），一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
-
+            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“Wi-Matt”（创客汇）
+            <span class=" show_more">，一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。</span>
+            <span class=" hide_more">......</span>
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             Wi-Matt是winnovator matters的意思，在Wi-Matt，专家们可以：
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 获取最前沿的科研信息
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 展示科研成果
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 专业学术、案例交流
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 跨界合作
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 全球资源共享
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 业界同仁交友
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 自助学习，专业增值
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 参与科研的机会
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 为大众提供专业心理服务
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             为了提供最好的服务质量，所以我们暂时只通过邀请码的方式邀请专家加入，如果您愿意在此阶段和我们一起让wi-Matt变得更完美，请联络
             <br>wi-matt@winnovator.com</div>
+
+        <div style="text-align: center">
+            <img class="control_wenzi guanbi" src="./image/guanbi.png"/>
+        </div>
 
         <div style="text-align: center; margin-bottom: 20px">
             <a class="qiyeshiyong" href="./login.html">
@@ -141,8 +147,6 @@
             </a>
         </div>
 
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            我们会尽快更新专家库的信息。</div>
 
         <ul class="putong_zhuanjia">
             <li>
@@ -371,104 +375,108 @@
     </div>
 
 
+    <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-bottom: 20px; font-size: 12px;">
+        我们会尽快更新专家库的信息。</div>
 
     <!-- 分享 -->
-    <div class="share share-white">
-        <span>分享给好友</span>
-        <ul class="share-list">
-            <li>
-                <a class="share-icon"
-                   data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                   data-img="./image/facebook.png"
-                   data-platform="facebook" data-title="" data-type="facebook"
-                   data-url="http://winnovator.com"
-                   data-ajax="false">
-                    <img src="./image/facebook.png"/>
+    <div class=" share-blank">
+        <div class="share">
+            <span>分享给好友</span>
+            <ul class="share-list">
+                <li>
+                    <a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/facebook.png"
+                       data-platform="facebook" data-title="" data-type="facebook"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/facebook.png"/>
+                    </a>
+                </li>
+                <li>
+                    <a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="weibo" data-title="" data-type="weibo"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/weibo.png"/>
+                    </a>
+                </li>
+                <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
+                       data-ajax="false">
+                    <img src="./image/weixin_icon.png"/>
                 </a>
-            </li>
-            <li>
-                <a class="share-icon"
-                   data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                   data-img="./image/weixin.png"
-                   data-platform="weibo" data-title="" data-type="weibo"
-                   data-url="http://winnovator.com"
-                   data-ajax="false">
-                    <img src="./image/weibo.png"/>
-                </a>
-            </li>
-            <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                   data-img="./image/weixin.png"
-                   data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
-                   data-ajax="false">
-                <img src="./image/weixin_icon.png"/>
-                </a>
-            </li>
-        </ul>
-    </div>
+                </li>
+            </ul>
+        </div>
 
 
-    <div class="footer_navbar">
-        <ul>
-            <li class="footer_navbar_li">
-                <a  class="right" href="./aboutus.html">
-                    <img src="./image/ahoutus.png"/>
-                    <span class="text">关于我们</span>
-                </a>
-            </li>
-            <li class="footer_navbar_li">
-                <img src="./image/welcome.png"/>
-                <a class="left" href="./shehuizeren.html">
-                    <span class="text">社会责任</span>
-                </a>
-            </li>
-            <li class="footer_navbar_li">
-                <a  class="right" href="./meitijieshao.html">
-                    <img src="./image/meitijieshao.png"/>
-                    <span class="text">媒体介绍</span>
-                </a>
-            </li>
-            <li class="footer_navbar_li">
-                <img src="./image/lianluowomen.png"/>
-                <a class="left" href="./lianxiwomen.html">
-                    <span class="text">联络我们</span>
-                </a>
-            </li>
+        <div class="footer_navbar">
+            <ul>
+                <li class="footer_navbar_li">
+                    <a  class="right" href="./aboutus.html">
+                        <img src="./image/ahoutus-blue.png"/>
+                        <span class="text-blue">关于我们</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <img src="./image/welcome-blue.png"/>
+                    <a class="left" href="./shehuizeren.html">
+                        <span class="text-blue">社会责任</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a  class="right" href="./meitijieshao.html">
+                        <img src="./image/meitijieshao-blue.png"/>
+                        <span class="text-blue">媒体介绍</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <img src="./image/lianluowomen-blue.png"/>
+                    <a class="left" href="./lianxiwomen.html">
+                        <span class="text-blue">联络我们</span>
+                    </a>
+                </li>
 
-            <li class="footer_navbar_li">
-                <a  class="right" href="mailto:service@winnovator.com">
-                    <img src="./image/zaixiankefu.png"/>
-                    <span class="text">在线客服</span>
-                </a>
-            </li>
-            <li class="footer_navbar_li">
-                <img src="./image/hezuohuoban.png"/>
-                <div class="right" style="position: relative;">
-                    <span class="text">合作伙伴</span>
-                    <select id="hezuohuoban_select">
-                        <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
-                        <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
-                        <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
-                        <option data-url="http://www.firsteap.com/detail.do?id=512&type=1&channel=1">哈佛大学医学院教练中心</option>
-                    </select>
-                </div>
-            </li>
+                <li class="footer_navbar_li">
+                    <a  class="right" href="mailto:service@winnovator.com">
+                        <img src="./image/zaixiankefu-blue.png"/>
+                        <span class="text-blue">在线客服</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <img src="./image/hezuohuoban-blue.png"/>
+                    <div class="right" style="position: relative;">
+                        <span class="text-blue">合作伙伴</span>
+                        <select id="hezuohuoban_select">
+                            <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
+                            <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
+                            <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
+                            <option data-url="http://www.firsteap.com/detail.do?id=512&type=1&channel=1">哈佛大学医学院教练中心</option>
+                        </select>
+                    </div>
+                </li>
 
-            <!--  条款 -->
-            <li style="margin-top: 20px">
-                <div class="policy">
-                    <a href="#"><span>隐私政策</span></a>
-                    <a href="#"><span>使用条款</span></a>
-                </div>
+                <!--  条款 -->
+                <li style="margin-top: 20px">
+                    <div class="policy-blue">
+                        <a href="#"><span>隐私政策</span></a>
+                        <a href="#"><span>使用条款</span></a>
+                    </div>
 
-            </li>
-            <li>
-                <div class="copyright">
-                    Copyright© 2015 幸福创客 版权所有
-                </div>
+                </li>
+                <li>
+                    <div class="copyright-blue">
+                        Copyright© 2015 幸福创客 版权所有
+                    </div>
 
-            </li>
-        </ul>
+                </li>
+            </ul>
 
+        </div>
     </div>
 </div>
 
