--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -35,33 +35,34 @@
 <div class="my_page">
     <!--<img src="image/office.png">-->
 
-    <div>
-        <div class="air_content slider">
-            <div class="content-wrapper slides">
-                <div class="content_article content_article--fast slide">
-                    <img class="photo"
-                         src="./image/alading1.jpg">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo"
-                         src="./image/alading2.jpg">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo"
-                         src="./image/alading3.jpg">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo"
-                         src="./image/alading4.jpg">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo"
-                         src="./image/alading5.jpg">
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--<div>-->
+        <!--<div class="air_content slider">-->
+            <!--<div class="content-wrapper slides">-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo"-->
+                         <!--src="./image/alading1.jpg">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo"-->
+                         <!--src="./image/alading2.jpg">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo"-->
+                         <!--src="./image/alading3.jpg">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo"-->
+                         <!--src="./image/alading4.jpg">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo"-->
+                         <!--src="./image/alading5.jpg">-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
+    <img src="image/airobot-head.jpg" class="info_img">
 
     <!-- 介绍 -->
     <div class="airbobot_info">
