--- a/tool/test_video.html
+++ b/tool/test_video.html
@@ -7,7 +7,7 @@
 <body>
 <video width="640" height="360" controls autoplay>
     <!-- MP4 must be first for iPad! -->
-    <source src="http://192.168.0.104:9090//mobile/video/VfE_html5.mp4" type="video/mp4"  />
+    <source src="../mobile/video/VfE_html5.mp4" type="video/mp4"  />
 
     <!--<source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/mp4"  />&lt;!&ndash; Safari / iOS, IE9 &ndash;&gt;-->
     <!--<source src="http://clips.vorwaerts-gmbh.de/VfE.webm"      type="video/webm" />&lt;!&ndash; Chrome10+, Ffx4+, Opera10.6+ &ndash;&gt;-->
