--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -37,7 +37,7 @@
     <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="100%"
            poster="./image/video_dace.png"
            data-setup="{}">
-        <source src ="http://192.168.0.104:9090/mobile/video/VfE_html5.mp4" type='video/mp4' />
+        <source src ="http://7xi66y.com1.z0.glb.clouddn.com/H264-AAC640.mp4" type='video/mp4' />
         <!--<source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />-->
         <!--<source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />-->
         <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
