--- a/mobile/index.html
+++ b/mobile/index.html
@@ -62,23 +62,23 @@
             <!--</li>-->
         <!--</ul>-->
 
-
-        <a href="./used.html">
-            <img class="info_img" src="./image/1.jpg"/>
-        </a>
-        <a href="./zhuanjia.html">
-            <img class="info_img" src="./image/2.jpg"/>
-        </a>
-        <a href="./airobot.html">
-            <img class="info_img" src="./image/3.jpg"/>
-        </a>
-        <a href="./ourteam.html">
-            <img class="info_img" src="./image/4.jpg"/>
-        </a>
-        <a href="./welcome.html ">
-            <img class="info_img" src="./image/5.jpg"/>
-        </a>
-
+        <div class="index">
+            <a href="./used.html">
+                <img class="info_img" src="./image/1.jpg"/>
+            </a>
+            <a href="./zhuanjia.html">
+                <img class="info_img" src="./image/2.jpg"/>
+            </a>
+            <a href="./airobot.html">
+                <img class="info_img" src="./image/3.jpg"/>
+            </a>
+            <a href="./ourteam.html">
+                <img class="info_img" src="./image/4.jpg"/>
+            </a>
+            <a href="./welcome.html ">
+                <img class="info_img" src="./image/5.jpg"/>
+            </a>
+        </div>
 
         <!-- 分享 -->
         <div class=" share-blank">
