--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -39,59 +39,15 @@
 
 
 <div class="popup" data-role="popup" style="width: 100%;" id="popupParis" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-    <div class="team slider">
-        <div class="content-wrapper slides">
-            <div class="content_article content_article--fast slide">
+    <iframe src="http://www.baidu.com">
+    <div class="team">
+        <div class="content-wrapper">
+            <div class="content_article">
                 <img src="./image/ourteam.png">
             </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/tim.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/maomao.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/alice.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/jamie.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/ting.png">
-            </div>
-
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/kiu.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/tian.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/ju.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/siron.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/yijiao.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/xinyi.png">
-            </div>
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/dong.png">
-            </div>
-
-
-
-
-            <div class="content_article content_article--fast slide">
-                <img class="photo" src="./image/yajing.png">
-            </div>
-
         </div>
     </div>
+    </iframe>
 </div>
 
 <div class="my_page">
