--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./css/my_style.css">
 
     <link rel="stylesheet" href="./css/styles.css"/>
-    <link rel="stylesheet" href="./css/themes/default/jquery.mobile-1.4.5.min.css">
+    <!--<link rel="stylesheet" href="./css/themes/default/jquery.mobile-1.4.5.min.css">-->
 
     <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="./js/jquery.glide.min.js"></script>
-    <script src="./js/jquery.mobile-1.4.5.js"></script>
+    <!--<script src="./js/jquery.mobile-1.4.5.js"></script>-->
     <script type="text/javascript" src="./js/jquery.glide.min.js"></script>
 </head>
 <body onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;">
@@ -38,74 +38,66 @@
 
 
 
-<div class="popup" data-role="popup" style="width: 100%;" id="popupParis" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <iframe src="http://www.baidu.com">
-    <div class="team">
-        <div class="content-wrapper">
-            <div class="content_article">
-                <img src="./image/ourteam.png">
-            </div>
-        </div>
-    </div>
-    </iframe>
-</div>
+<!--<div class="popup" data-role="popup" style="width: 100%;" id="popupParis" data-overlay-theme="b" data-theme="b" data-corners="false">-->
+    <!--<div class="team">-->
+        <!--<div class="content-wrapper">-->
+            <!--<div class="content_article">-->
+                <!--<img src="./image/ourteam.png">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <div class="my_page">
         <div>
-            <a href="#popupParis" data-rel="popup" data-position-to="window" data-transition="fade">
-                <div class="team slider">
-                    <div class="content-wrapper slides">
-                        <div class="content_article content_article--fast slide">
-                            <img src="./image/ourteam.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/tim.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/maomao.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/alice.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/jamie.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/ting.png">
-                        </div>
-
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/kiu.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/tian.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/ju.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/siron.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/yijiao.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/xinyi.png">
-                        </div>
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/dong.png">
-                        </div>
-
-
-
-
-                        <div class="content_article content_article--fast slide">
-                            <img class="photo" src="./image/yajing.png">
-                        </div>
-
+            <div class="team slider">
+                <div class="content-wrapper slides">
+                    <div class="content_article content_article--fast slide">
+                        <img src="./image/ourteam.png">
                     </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/tim.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/maomao.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/alice.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/jamie.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/ting.png">
+                    </div>
+
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/kiu.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/tian.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/ju.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/siron.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/yijiao.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/xinyi.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/dong.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/yajing.png">
+                    </div>
+
                 </div>
-            </a>
+            </div>
         </div>
 
         <!-- 介绍 -->
