--- a/tool/test-zoom.html
+++ b/tool/test-zoom.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+<html itemscope="itemscope" itemtype="http://schema.org/Product" lang="en">
+<head>
+    <title>首页 - 幸福创客</title>
+    <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
+          name="description"/>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <meta content="width=device-width,minimum-scale=1.0,maximum-scale=2.0" name="viewport"/>
 </head>
 <body>
+<!--onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;"-->
+
+<div class="my_page">
+    <img class="info_img" src="../mobile/image/1.jpg" style="width: 100px; height: 100px;max-width: 200px"/>
+</div>
+
 
 </body>
 </html>
