--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -51,12 +51,12 @@
 
 
 
-<div  id="popupbox" style="display: none">
-    <div id="popup-div" style=" border:1px solid #d3d3d3; padding:5px; background:#fff; width:100%;">
-        <img src="./image/ourteam.png">
-    </div>
+<!--<div  id="popupbox" style="display: none">-->
+    <!--<div id="popup-div" style=" border:1px solid #d3d3d3; padding:5px; background:#fff; width:100%;">-->
+        <!--<img src="./image/ourteam.png">-->
+    <!--</div>-->
 
-</div>
+<!--</div>-->
 
 <div class="my_page">
         <div>
@@ -157,62 +157,62 @@
             <span>使这个世界更健康、更幸福</span><br>
 
         </div>
-<!--弹出框内容-->
-    <div class="popup" data-role="popup" style="width: 100%;" id="popupParis" data-overlay-theme="b" data-theme="b" data-corners="false">
-        <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-        <div class="team slider">
-            <div class="content-wrapper slides">
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/ourteam.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/tim.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/maomao.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/alice.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/jamie.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/ting.png">
-                </div>
+<!--&lt;!&ndash;弹出框内容&ndash;&gt;-->
+    <!--<div class="popup" data-role="popup" style="width: 100%;" id="popupParis" data-overlay-theme="b" data-theme="b" data-corners="false">-->
+        <!--<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>-->
+        <!--<div class="team slider">-->
+            <!--<div class="content-wrapper slides">-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/ourteam.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/tim.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/maomao.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/alice.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/jamie.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/ting.png">-->
+                <!--</div>-->
 
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/kiu.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/tian.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/ju.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/siron.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/yijiao.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/xinyi.png">
-                </div>
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/dong.png">
-                </div>
-
-
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/kiu.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/tian.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/ju.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/siron.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/yijiao.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/xinyi.png">-->
+                <!--</div>-->
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/dong.png">-->
+                <!--</div>-->
 
 
-                <div class="content_article content_article--fast slide">
-                    <img class="photo" src="./image/yajing.png">
-                </div>
 
-            </div>
-        </div>
-    </div>
+
+                <!--<div class="content_article content_article--fast slide">-->
+                    <!--<img class="photo" src="./image/yajing.png">-->
+                <!--</div>-->
+
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 
 
