--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -137,13 +137,16 @@
             为了提供最好的服务质量，所以我们暂时只通过邀请码的方式邀请专家加入，如果您愿意在此阶段和我们一起让wi-Matt变得更完美，请联络
             <br>wi-matt@winnovator.com</div>
 
-        <div style="text-align: center">
-            <img class="control_wenzi guanbi" src="./image/guanbi.png"/>
+        <div style="text-align: center;">
+            <div class="control_wenzi" style="
+    box-shadow: #e6e6e6 0px 0px 5px;max-width: 300px;margin-left: auto;margin-right: auto; margin-bottom: 20px;">
+                <img style="max-width: 300px;" class=" guanbi" src="./image/zhankai_more.png"/>
+            </div>
         </div>
 
         <div style="text-align: center; margin-bottom: 20px">
             <a class="qiyeshiyong" href="./login.html">
-                <img src="./image/zhuanjiadenglu.png">
+                <img src="./image/qiyedenglu.png">
             </a>
         </div>
 
