--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -132,7 +132,7 @@
         <br>
 
         <div class="welcome_content_content">你需要思维活跃，维持社区活跃度和粘性，让爱幸福的人在这玩起来</div>
-        <div class="welcome_content_xiwang">【我们希望你是这样的】</div>
+        <div class="welcome_content_xiwang">{我们希望你是这样的}</div>
         <div class="welcome_content_yaoqiu">
             <div class="index_line">1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力；</div>
 
@@ -145,7 +145,7 @@
 
 
         <!--<div class="welcome-name">心理学家</div>-->
-        <img class="info_img"  src="./image/pro.png"/>
+        <img class="info_img"  src="./image/psy.png"/>
         <div>
             <div class="info_img" style="margin-top:0px;width:100%;background: url('./image/welcome5.jpg') center top no-repeat;background-repeat:no-repeat;background-size:cover;-moz-background-size:cover;-webkit-background-size:cover;">
                 <img class="info_img" style="visibility: hidden" src="./image/welcome5.jpg"/>
