--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -82,7 +82,9 @@
 
     <div style="text-align: center; margin-bottom: 20px">
         <a class="qiyeshiyong" href="./lianxiwomen.html">
-            <img src="./image/chaxunairobot.png">
+            <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">
+                查询Ai-Robot</div>
+
         </a>
     </div>
 
