--- a/mobile/used.html
+++ b/mobile/used.html
@@ -131,11 +131,13 @@
 
 
             <div style="text-align: center">
-            <a class="qiyeshiyong" href="../user/enterprise/index.html">
-                <img src="./image/qiyedenglu.png">
+
+            <a class="qiyeshiyong" style="text-decoration: none;" href="../user/enterprise/index.html">
+                <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">企业用户登录</div>
             </a>
             <a class="qiyeshiyong" href="mailto:service@winnovator.com">
-                <img src="./image/chaxun.png">
+                <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">查询Wi-PRO</div>
+
             </a>
             </div>
 
