--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -146,7 +146,8 @@
 
         <div style="text-align: center; margin-bottom: 20px">
             <a class="qiyeshiyong" href="./login.html">
-                <img src="./image/qiyedenglu.png">
+                <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">
+                    企业用户登录</div>
             </a>
         </div>
 
