--- a/mobile/used.html
+++ b/mobile/used.html
@@ -133,10 +133,10 @@
             <div style="text-align: center">
 
             <a class="qiyeshiyong" style="text-decoration: none;" href="../user/enterprise/index.html">
-                <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">企业用户登录</div>
+                <div class="my_button">企业用户登录</div>
             </a>
-            <a class="qiyeshiyong" href="mailto:service@winnovator.com">
-                <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">查询Wi-PRO</div>
+            <a class="qiyeshiyong" style="text-decoration: none;" href="mailto:service@winnovator.com">
+                <div  class="my_button">查询Wi-PRO</div>
 
             </a>
             </div>
