--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -81,8 +81,8 @@
     </div>
 
     <div style="text-align: center; margin-bottom: 20px">
-        <a class="qiyeshiyong" href="./lianxiwomen.html">
-            <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">
+        <a style="text-decoration: none;" class="qiyeshiyong" href="./lianxiwomen.html">
+            <div  class="my_button">
                 查询Ai-Robot</div>
 
         </a>
