--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -145,8 +145,8 @@
         </div>
 
         <div style="text-align: center; margin-bottom: 20px">
-            <a class="qiyeshiyong" href="./login.html">
-                <div style=" color:#ffffff;font-size:16px; width: 100%; height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px">
+            <a style="text-decoration: none;" class="qiyeshiyong" href="./login.html">
+                <div  class="my_button">
                     企业用户登录</div>
             </a>
         </div>
