--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -139,7 +139,7 @@
 
         <div style="text-align: center;">
             <div class="control_wenzi" style="
-    box-shadow: #e6e6e6 0px 0px 5px;max-width: 300px;margin-left: auto;margin-right: auto; margin-bottom: 20px;">
+    box-shadow: #e6e6e6 0px 0px 5px;max-width: 300px;margin-left: 20px;margin-right: 20px; margin-bottom: 20px;">
                 <img style="max-width: 300px;" class=" guanbi" src="./image/zhankai_more.png"/>
             </div>
         </div>
