--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -147,7 +147,7 @@
         <div style="text-align: center; margin-bottom: 20px">
             <a style="text-decoration: none;" class="qiyeshiyong" href="./login.html">
                 <div  class="my_button">
-                    企业用户登录</div>
+                    专家登录</div>
             </a>
         </div>
 
