--- a/mobile/meitijieshao.html
+++ b/mobile/meitijieshao.html
@@ -143,7 +143,7 @@
                 <div class="one_meiti_img">  <img style="width: 70%; height: 70%;" src="./image/sinacaijing.jpg"/></div>
                 <div class="one_meiti_date">2014-04-10</div>
                 <div class="one_meiti_content"><a href="http://finance.sina.com.cn/hy/20140410/211118762730.shtml">
-                    大陆企业增长优秀 日韩企业品牌信任度高</a></div>
+                    苏德中：大陆企业增长优秀 日韩企业品牌信任度高</a></div>
             </div>
             <div class="one_meiti">
                 <div class="one_meiti_img">  <img style="width: 70%; height: 70%;" src="./image/experttheworld.jpg"/></div>
