--- a/mobile/used.html
+++ b/mobile/used.html
@@ -36,7 +36,7 @@
         <div class="vip-made" style="font-size: 14px; margin: 10px;">
             <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为企业提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是面向创业公司、中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面、更精准、更便捷的合理化订制方案。
             </p>
-            <p style="margin-top: 20px">我们团队成员负责的经典案例:</p>
+            <p style="margin-top: 20px">我们团队成员负责的部分案例:</p>
             <!-- 各个使用案例 -->
             <div>
                 <ul class="cases-list">
