--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -167,6 +167,28 @@
         </div>
         <div class="welcome_content_xiwang">【加分项】</div>
         <div class="index_line welcome_content_content">社会心理学、认知心理学、神经科学、咨询心理学；</div>
+
+
+        <img class="info_img"  src="./image/AI.png"/>
+        <div>
+            <div class="info_img" style="margin-top:0px;width:100%;background: url('./image/ai-zhaopin.jpg') center top no-repeat;background-repeat:no-repeat;background-size:cover;-moz-background-size:cover;-webkit-background-size:cover;">
+                <img class="info_img" style="visibility: hidden" src="./image/ai-zhaopin.jpg"/>
+            </div>
+            <div class="us_email">发送简历至hr@winnovator.com</div>
+        </div>
+        <br>
+        <br>
+
+        <div class="welcome_content_content">你需要对人工智能，机器学习知识库等技术有了解，并且有志于从事相关领域工作</div>
+        <div class="welcome_content_xiwang">{我们希望你是这样的}</div>
+        <div class="welcome_content_yaoqiu">
+            <div class="index_line">1、具备软件系统设计能力；</div>
+
+            <div class="index_line">2、具备较好的数学建模技术能力和实践；</div>
+            <div class="index_line">3、熟悉人工智能算法；</div>
+
+            <div class="index_line">4、熟悉常规的图像处理、识别、语音识别算法、统计分类、模式识别、神经网络等算法；</div>
+        </div>
         <br>
         <div>PS: 心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可</div>
     </div>
